De Solla Price: Little Science, Big Science

--- a/science/index.html
+++ b/science/index.html
@@ -1297,6 +1297,9 @@
         <i class="magazine">EOS Wetenschap</i>, 11.08.2018.
         <!--"De basisbeginselen van de natuurkunde, scheikunde en biologie zijn bekend en hoogstens gaat het nog om het op z’n plaats leggen van de laatste puzzelstukjes."-->
       </li>
+      <li>De Solla Price, Derek J.:
+        <a href="https://en.wikipedia.org/wiki/Little_Science,_Big_Science"><i class="booktitle">Little Science, Big Science</i></a> (1963).
+      </li>
       <!--Medawar: The Limits of Science-->
       <li><a href="https://en.wikipedia.org/wiki/Nicholas_Rescher">Rescher, Nicholas</a>:
         <i class="booktitle">The Limits of Science</i> (1984, 1999).
