--- a/humanities/index.html
+++ b/humanities/index.html
@@ -404,6 +404,10 @@
         <a href="http://web.cn.edu/kwheeler/lit_terms.html">Literary Vocabulary</a>:
         an online glossary of literary terms.
       </li>
+      <li>
+        <a href="https://literaryterms.net/">Literary Terms: Definition and Examples of Literary Terms</a>.
+        (Website maintained by an anonymous person, possibly in the <abbr>USA</abbr>.)
+      </li>
       <!--@@http://web.cn.edu/kwheeler/resource_rhet.html-->
       <li>University of Cambridge, Faculty of English:
         <a href="https://www.english.cam.ac.uk/classroom/terms.htm">Glossary of Literary Terms</a>.
