Open Education Sociology Dictionary

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -785,6 +785,10 @@
         <a href="https://www.youtube.com/watch?v=gEMQCJ6_FMI">Roundhouse Poetry Slam 2013 Runner Up: Ben Norris</a>
         (YouTube, 3 minutes, 03.09.2013): inspired by Newton's &ldquo;invention&rdquo; of gravity.
       </li>
+      <li>
+        <a href="https://sociologydictionary.org/">Open Education Sociology Dictionary</a>,
+        edited by <a href="https://kentonville.com/">Kenton Bell</a>.
+      </li>
     </ul>
 
     <!--@@separate "Two Cultures" page?-->
