--- a/humanities/index.html
+++ b/humanities/index.html
@@ -408,6 +408,10 @@
         <a href="https://literaryterms.net/">Literary Terms: Definition and Examples of Literary Terms</a>.
         (Website maintained by an anonymous person, possibly in the <abbr>USA</abbr>.)
       </li>
+      <li>
+        <a href="https://literarydevices.net/">LiteraryDevices.net</a>.
+        (Website maintained by an anonymous person, possibly in the <abbr>USA</abbr>.)
+      </li>
       <!--@@http://web.cn.edu/kwheeler/resource_rhet.html-->
       <li>University of Cambridge, Faculty of English:
         <a href="https://www.english.cam.ac.uk/classroom/terms.htm">Glossary of Literary Terms</a>.
