--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -55,12 +55,23 @@
   <main>
     <blockquote id="introquote">
       <p>
+        <q cite="http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Moralia/De_auditu*.html">For the mind does not require filling like a bottle,
+        but rather, like wood, it only requires kindling to create in it an impulse to think independently and an ardent desire for the truth.</q>
+        <cite><a href="https://en.wikipedia.org/wiki/Plutarch">Plutarch</a>,
+        <a href="https://en.wikipedia.org/wiki/Moralia"><i class="booktitle">Moralia</i></a> (<abbr>ca.</abbr> 100 <abbr>AD</abbr>).
+        </cite>
+      </p>
+    </blockquote>
+    <!--
+    <blockquote id="introquote">
+      <p>
         <q cite="https://en.wikiquote.org/wiki/Walter_Lippmann">Where all think alike, no one thinks very much.</q>
         <cite><a href="https://en.wikipedia.org/wiki/Walter_Lippmann">Walter Lippmann</a>, 
         <i class="booktitle">The Stakes of Diplomacy</i> (1915).
         </cite>
       </p>
     </blockquote>
+    -->
 
 
     <h2>Three Complementary Paths</h2>
