International Society for Philosophers

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -838,6 +838,9 @@
         The society publishes the
         <a href="https://jhaponline.org/" class="journal">Journal for the History of Analytical Philosophy (<abbr>JHAP</abbr>)</a>.
       </li>
+      <li>
+        <a href="https://isfp.co.uk/">International Society for Philosophers (<abbr>ISFP</abbr>)</a>.
+      </li>
     </ul>
 
     <h3>United Kingdom</h3>
