--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -841,6 +841,9 @@
       <li>
         <a href="https://isfp.co.uk/">International Society for Philosophers (<abbr>ISFP</abbr>)</a>.
       </li>
+      <li>
+        <a href="http://hopos.org/"><abbr>HOPOS</abbr> &mdash; The International Society for History of Philosophy of Science</a>.
+      </li>
     </ul>
 
     <h3>United Kingdom</h3>
