Institute for the Study of Scottisch Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -844,6 +844,9 @@
       <li>
         <a href="http://hopos.org/"><abbr>HOPOS</abbr> &mdash; The International Society for History of Philosophy of Science</a>.
       </li>
+      <li>
+         <a href="https://www.usiouxfalls.edu/academics/issp">Institute for the Study of Scottish Philosophy</a>.
+      </li>
     </ul>
 
     <h3>United Kingdom</h3>
