International Society for Chinese Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -847,6 +847,12 @@
       <li>
          <a href="https://www.usiouxfalls.edu/academics/issp">Institute for the Study of Scottish Philosophy</a>.
       </li>
+      <li>
+        <a href="http://www.iscp-online.org/">International Society for Chinese Philosophy</a>.
+      </li>
+      <li>
+        <a href="http://www.societyphilosophyreligion.org/journal">Society for Philosophy of Religion</a>.
+      </li>
     </ul>
 
     <h3>United Kingdom</h3>
