International Society for Philosophical Enquiry

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -853,6 +853,9 @@
       <li>
         <a href="http://www.societyphilosophyreligion.org/journal">Society for Philosophy of Religion</a>.
       </li>
+      <li>
+        <a href="https://www.thethousand.com/">International Society for Philosophical Enquiry (The Thousand®)</a>.
+      </li>
     </ul>
 
     <h3>United Kingdom</h3>
