American Philosophical Society

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -955,6 +955,9 @@
         The <abbr>APA</abbr> also has a 
         <a href="https://twitter.com/apaphilosophy">Twitter account</a>.
       </li>
+      <li>
+        <a href="https://www.amphilsoc.org/">American Philosophical Society</a>.
+      </li>
     </ul>
 
     <h3>Australia and New Zealand</h3>
