Unger: Empty Ideas

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1777,6 +1777,10 @@
       <li>Wikipedia:
         <a href="https://en.wikipedia.org/wiki/List_of_important_publications_in_philosophy">List of important publications in philosophy</a>.
       </li>
+      <li>Unger, Peter:
+        <i class="booktitle">Empty Ideas: A Critique of Analytic Philosophy</i>. Oxford University Press, 2014. (272 pages)
+        <a href="https://global.oup.com/academic/product/empty-ideas-9780199330812"><abbr>ISBN</abbr> 9780199330812</a>.
+      </li>
     </ul>
 
     <h2>Death</h2>
