Joll: Philosophy and the Hitchhiker's Guide to the Galaxy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1841,6 +1841,26 @@
         <q>A growing number of philosophers are conducting experiments to test their arguments. Is this the future for philosophy?</q>
         <!--@@pdf-->
       </li>
+      <li>Joll, Nicholas (editor):
+        <i class="booktitle">Philosophy and The Hitchhiker’s Guide to the Galaxy</i>. Palgrave Macmillan, 2012. (308 pages)
+        <a href="https://www.palgrave.com/us/book/9780230291126"><abbr>ISBN</abbr> 978-0-230-29112-6</a>.
+        <!--@@preview & https://link.springer.com/book/10.1007/978-0-230-39265-6 -->
+        <br />See also
+        <a href="https://philosophynow.org/issues/104/Philosophy_and_the_Hitchhikers_Guide_to_the_Galaxy_edited_by_Nicholas_Joll">Massimo Pigliucci's review</a>
+        in <i class="magazine">Philosophy Now</i>.
+        <br />Quote from <i class="booktitle">The Hitchhiker’s Guide to the Galaxy</i>:
+        <blockquote>
+          <p>Now it is such a bizarrely improbable coincidence that anything so mindbogglingly useful could evolve purely by chance that some thinkers have chosen to see it as a final and clinching proof of the non-existence of God. The argument goes something like this:</p>
+          <p class="dialogue">"I refuse to prove that I exist," says God, "for proof denies faith, and without faith I am nothing."</p>
+          <p class="dialogue">"But," says Man, "the Babel fish is a dead giveaway, isn't it? It could not have evolved by chance. It proves you exist, and so therefore, by your own arguments, you don't. <abbr>QED</abbr>."</p>
+          <p class="dialogue">"Oh dear," says God, "I hadn't thought of that," and promptly vanishes in a puff of logic.</p>
+          <p class="dialogue">"Oh, that was easy," says Man, and for an encore goes on to prove that black is white, and gets killed on the next zebra crossing.</p>
+          <p>Most leading theologians claim that this argument is a load of dingo's kidneys.
+          But this did not stop Oolon Colluphid making a small fortune when he used it as the central theme for his best selling book, <i class="booktitle">Well That About Wraps It Up for God</i>.
+          Meanwhile the poor Babel fish, by effectively removing all barriers to communication between different cultures and races, has caused more and bloodier wars than anything else in the history of creation.</p>
+        </blockquote>
+      </li>
+      <!--@@@@todo: Massimo Pigliucci's review of Doctor Who and Philosophy: https://philosophynow.org/issues/89/Doctor_Who_and_Philosophy -->
       <li>
         <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
         is a 6-minute video by <abbr>CGP</abbr> Grey
