--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2119,6 +2119,11 @@
         <a href="http://www.filosofico.net/" hreflang="it">FILOSOFICO.net</a>:
         website by the Italian philosopher <span lang="it">Diego Fusaro</span>.
       </li>
+      <!--@@postmodernism:-->
+      <li>
+        <a href="http://www.critical-theory.com/foucault-obscurantism-they-it/">Foucault On Obscurantism: ‘They Made Me Do It!’</a>,
+        <i class="website">Critical-Theory.com</i>, 11.07.2013.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
