Chen: Is Postmodernism to Blame for Post-Truth?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2133,6 +2133,10 @@
         (YouTube, 9 minutes, 17.01.2018).
         This short video is an excerpt from a longer interview with Gad Saad.
       </li>
+      <li>Chen, Truman:
+        <a href="https://www.philosophytalk.org/blog/postmodernism-blame-post-truth/">Is Postmodernism to Blame for Post-Truth?</a>,
+        <i class="blog">Philosophy Talk</i>, 17.02.2017.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
