Eliot: Tradition and the Individual Talent

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -566,6 +566,16 @@
         <a href="https://www.poets.org/poetsorg/text/tradition-and-individual-talent">Tradition and the Individual Talent</a>,
         <i class="website">poets.org</i> (no date; originally published in 1919).
       </li>
+      <li>Eliot, T. S.:
+        <a href="https://www.poetryfoundation.org/articles/69400/tradition-and-the-individual-talent">Tradition and the Individual Talent</a>,
+        <i class="website">Poetry Foundation</i> (no date; with a short introduction by an anonymous author).
+        <!--"T.S. Eliot’s literary criticism informs his poetry just as his experiences as a poet shape his critical work. Though famous for insisting on “objectivity” in art, Eliot’s essays actually map a highly personal set of preoccupations, responses and ideas about specific authors and works of art, (...)"
+          @@see Lit SE question: "How did T.S. Eliot's literary criticism affect his poetry?": https://literature.stackexchange.com/questions/1007/how-did-t-s-eliots-literary-criticism-affect-his-poetry 
+        -->
+      </li>
+      <!--"How Eliot Refutes Wordsworth’s Concept of “emotion recollected in Tranquility”": http://www.literary-articles.com/2010/02/how-eliot-refutes-wordsworths-concept.html 
+        Objectivity in both his poetry and in his theory. Wordsworth might not have considered Eliot's poetry as proper poetry ;-)
+      -->
       <!--# Frank Lentricchia:
         https://literature.duke.edu/people/frank-lentricchia
         https://duckduckgo.com/?q=Lentricchia+%22Last+Will+and+Testament+of+an+Ex-Literary+Critic%22+%22lingua+franca%22&t=ffab&ia=web
