The Saad Truth (YouTube channel)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2146,6 +2146,12 @@
         <i class="blog">languages goes on holiday</i>, 15.02.2017.
         <!--@@check-->
       </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLa-VfOWrqWJ1TUk6pvudnkhI91whoR7XP">The Saad Truth</a>
+        playlist on the YouTube channel of
+        <a href="https://www.concordia.ca/jmsb/faculty/gad-saad.html">Gad Saad</a>,
+        evolutionary behavioural scientist at Concordia University.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
