Chantre: Les derniers jours de René Girard

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -810,6 +810,11 @@
         <br />Bruno Tilliette describes</span> <i class="booktitle">Des choses cachées depuis la fondation du moonde</i>
         <span lang="en-GB">as a book that changed his life.</span>
       </li>
+      <li><span lang="fr">Chantre, Benoît:
+        <i class="booktitle">Les derniers jours de René Girard</i>. Paris: Bernard Grasset</span>, 2016.
+        <abbr>ISBN</abbr> 978 2 246 86231 4.
+        <!--<a href=""><abbr>ISBN</abbr> </a>.-->
+      </li>
     </ul>
 
     <h2>Other Links</h2>
