--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2241,6 +2241,42 @@
       <li>desserts to be chosen from the Sweet Trolley Problem.</li>
     </ul>
     <p>Of course, there will be lots of foods for thought and everything will be simply Deleuzious.</p>
+
+    <hr />
+    <p>
+      <figure>
+        <img alt="comic in which a stick figure calls 911; long descripion below" src="https://imgs.xkcd.com/comics/trapped.png" longdesc="#xkcd-description" aria-describedby="xkcd-description" />
+        <figcaption><abbr>XKCD</abbr> comic <a href="https://xkcd.com/876/">&ldquo;Trapped&rdquo;</a>,
+        licence: <span lang="en-US">Creative Commons Attribution-NonCommercial 2.5 License.</span></figcaption>
+        <!--"Details & summary keyboard toggle support" since Firefox 48: https://bugzilla.mozilla.org/show_bug.cgi?id=1249556 
+          "Making A Complete Polyfill For The HTML5 Details Element" Nov 2014: https://www.smashingmagazine.com/2014/11/complete-polyfill-html5-details-element/
+        -->
+        <details id="xkcd-description">
+          <summary>Image description</summary>
+          <div>
+            <p>A person represented as a stick figure calls 911. A female operator answers the call. The dialogue is as follows:
+            <dl class="dialogue">
+              <dt>Caller</dt>
+                <dd>Hello? 911? I'm trapped! It's dark and I can't see anything except these two distorted spheres of light. Help!</dd>
+              <dt>Operator</dt>
+                <dd>Splotches of light? Your &hellip; eyeballs?</dd>
+              <dt>Caller</dt>
+                <dd> I think that's what they are! There's meat everywhere!</dd>
+              <dt>Operator</dt>
+                <dd>&hellip; So you're a brain.</dd>
+              <dt>Caller</dt>
+                <dd>Yes!</dd>
+              <dt>Operator</dt>
+                <dd>Yeah. We all are. You're not trapped. Use your body to walk around and experience reality.</dd>
+              <dt>Caller</dt>
+                <dd>But everything just signals in my sensory cortices! How can I be sure the correspond to an external world?!</dd>
+              <dt>Operator</dt>
+                <dd>I'm sorry, but we can't send a search-and-rescue team into Plato's cave.</dd>
+            </dl>
+          </div>
+        </details>
+      </figure>
+    </p>
   </main>
 
   <footer>
