Evans: The Structure of Scientific Revolutions

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -842,12 +842,30 @@
         <br />About Kuhn:
         <q>In the 1960s, it was chic to depict science as no more legitimate or authoritative than any other cultural practice. Instead, it is all a matter of propaganda and power moves.</q>
       </li>
+      <li>Evans, Vyv:
+        <a href="https://www.psychologytoday.com/intl/blog/language-in-the-mind/201504/the-structure-scientific-revolutions">The Structure of Scientific Revolutions</a>,
+        <i class="blog">Language in the Mind</i> (Psychology Today), 20.04.2015.
+        <br />Evans published <i class="booktitle">The Language Myth</i>
+        (<a href="https://www.cambridge.org/de/academic/subjects/languages-linguistics/cognitive-linguistics/language-myth-why-language-not-instinct?format=PB">Cambridge University Press</a>, 2014),
+        a rebuttal of Steven Pinker's <i class="booktitle">The Language Instinct</i>.
+        <!-- review: http://www.worldwidewords.org/reviews/re-lan4.htm -->
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
       </li--><!-- referenced in Wikipedia article "logology"; @@check -->
       <!--@@check: Rens Bod (Univeristy of Amsterdam humanities professor - cited by Michael Shermer-->
     </ul>
+    <!-- "What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay 
+      'During a recent symposium a speaker stated that "Thomas Kuhn's book The Structure of Scientific Revolutions was not a narrative, it was an essay."'
+      https://duckduckgo.com/?q=%22The+Structure+of+Scientific+Revolutions%22+narrative&t=ffab&ia=products
+      Examples of articles etc that use the term "narrative" in the context of a discussion of Kuhn's book:
+      https://www.theguardian.com/science/2012/aug/19/thomas-kuhn-structure-scientific-revolutions 
+        "The real measure of Kuhn's importance, however, lies not in the infectiousness of one of his concepts but in the fact that he singlehandedly changed the way we think about mankind's most organised attempt to understand the world. Before Kuhn, our view of science was dominated by philosophical ideas about how it ought to develop ("the scientific method"), together with a heroic narrative of scientific progress as "the addition of new truths to the stock of old truths, or the increasing approximation of theories to the truth, and in the odd case, the correction of past errors", as the Stanford Encyclopaedia of Philosophy puts it."
+      T. Arabatzis: "The Structure of Scientific Revolutions and History and Philosophy of Science in Historical Perspective" (2016) https://www.researchgate.net/publication/296976156_The_Structure_of_Scientific_Revolutions_and_History_and_Philosophy_of_Science_in_Historical_Perspective
+        "Furhermore, Kuhn's grand narrative of scientific development was not well received by historians of science, who have been skeptical of his generalizations and have not adopted his terminology and conceptual apparatus (paradigm, normal science, crisis, revolutions, etc.) to describe and explain how the sciences have developed."
+        "I see Kuhn's Structure as the founding work for philosophical history of science in the above sense."
+    -->
   </main>
 
   <footer>
