Hudson: Seeing Things

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -802,6 +802,14 @@
           * Zeitschrift für philosophische Forschung 69 (2015): http://www.klostermann.de/Zeitschrift-fuer-philosophische-Forschung-69-2015 
         -->
       </li>
+      <li>Hudson, Robert:
+        <i class="booktitle">Seeing Things: The Philosophy of Reliable Observation</i>. Oxford University Press, 2013. (298 pages)
+        <a href="https://global.oup.com/academic/product/seeing-things-9780199303281"><abbr>ISBN</abbr> 9780199303281</a>.
+        <br />From the publisher's description:
+        <q>In <i class="booktitle">Seeing Things</i>, Robert Hudson assesses a common way of arguing about observation reports called "robustness reasoning."
+        Robustness reasoning claims that an observation report is more likely to be true if the report is produced by multiple, independent sources.
+        <i class="booktitle">Seeing Things</i> argues that robustness reasoning lacks the special value it is often claimed to have.</q>
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Logology_%28science_of_science%29">Logology (science of science)</a>:
         article on Wikipedia.
         (Logology was proposed in the 1930s as a discipline that would subsume several other disciplines, 
