Boumans: Science Outside the Laboratory

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -810,6 +810,13 @@
         Robustness reasoning claims that an observation report is more likely to be true if the report is produced by multiple, independent sources.
         <i class="booktitle">Seeing Things</i> argues that robustness reasoning lacks the special value it is often claimed to have.</q>
       </li>
+      <li>Boumans, Marcel:
+        <i class="booktitle">Science Outside the Laboratory: Measurement in Field Science and Economics</i>. Oxford University Press, 2015. (216 pages)
+        <a href="https://global.oup.com/academic/product/science-outside-the-laboratory-9780199388288"><abbr>ISBN</abbr> 9780199388288</a>.
+        <br />From the publisher's description:
+        <q><i class="booktitle">Science Outside the Laboratory</i> explores the state of measurement theory, its reliability, and the role expert judgment plays in field investigations from the perspective of the philosophy of science.
+        Its discussion of the problems of passive observation, the calculus of observation, the two-model problem, and model-based consensus uses illustrations drawn primarily from economics.</q>
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Logology_%28science_of_science%29">Logology (science of science)</a>:
         article on Wikipedia.
         (Logology was proposed in the 1930s as a discipline that would subsume several other disciplines, 
