Woods: Les idées de Karl Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -166,6 +166,13 @@
         <a href="https://socialistworker.co.uk/art/46517/What+to+read+by%2C+and+about%2C+Karl+Marx">What to read by, and about, Karl Marx</a>,
         <i class="magazine">Socialist Worker</i>, issue 2602, 01.05.2018.
       </li>
+    </ul>
+
+    <h2>Links</h2>
+      <li>Woods, Alan:
+        <span lang="fr"><a href="https://www.marxiste.org/theorie/philosophie/928-les-idees-de-karl-marx" hreflang="fr">Les idées de Karl Marx</a>,
+        <i class="website">Révolution: Tendance marxiste internationale</i></span>, 12.02.2015.
+      </li>
       <!--David McLellan: The Influence of William Shakespeare on Karl Marx (University of Warwick): https://www.youtube.com/watch?v=6zmOWAq2-Gk (42 minutes)-->
       <li><span lang="de">Jäger, Johannes:
         <a href="https://www.youtube.com/watch?v=M8YSf0YC71I">Marx'sche Ökonomie</a></span>
