Daniel: I want to lean Artificila Intelligence ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -784,6 +784,10 @@
         <i class="blog">Data Science Central blog</i>, 24.08.2017.
         <!--@@move to data science page-->
       </li>
+      <li>Daniel:
+        <a href="https://hackernoon.com/i-want-to-learn-artificial-intelligence-and-machine-learning-where-can-i-start-7a392a3086ec">‘I want to learn Artificial Intelligence and Machine Learning. Where can I start?’</a>,
+        <i class="blog">Hackernoon on Medium</i>, 29.09.2018 (eight-minute read).
+      </li>
     </ul>
 
     <p>Books:</p>
