Karl Marx: 200 Years: Reading List

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -166,6 +166,10 @@
         <a href="https://socialistworker.co.uk/art/46517/What+to+read+by%2C+and+about%2C+Karl+Marx">What to read by, and about, Karl Marx</a>,
         <i class="magazine">Socialist Worker</i>, issue 2602, 01.05.2018.
       </li>
+      <li>
+        <a href="https://www.versobooks.com/lists/3780-karl-marx-200-years">Karl Marx: 200 Years: Reading List</a>,
+        <i class="blog">Verso blog</i>, 03.05.2018.
+      </li>
     </ul>
 
     <h2>Links</h2>
