--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@ permalink: /404.html
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Page not found! | Philosophy and Science</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/s_124085_triad.css" title="Three-colour scheme" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="./css/systemcolours.css" title="System colours" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="./css/default.css" title="No colours" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="./css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <link rel="stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/philosophy-and-science/css/s_124085_triad.css" title="Three-colour scheme" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/philosophy-and-science/css/systemcolours.css" title="System colours" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/philosophy-and-science/css/default.css" title="No colours" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/philosophy-and-science/css/meiert-qa.css" title="Meiert's QA Stylesheet" />
   <!-- custom 404 page, as explained at https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/ -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
