Links Science Day June 2018

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -150,11 +150,11 @@
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2018-06-29-11-science-day">11th Science</a>: 29 June 2018. Topics:
         <ul>
-          <li>"Cool Stuff Nearby" - Astrophysics - Andreas Stiegler</li>
-          <li>"Rocket Engines" - Engineering - Stephan Soller</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2018-06-29-11-science-day/Cool%20Stuff%20Nearby%20-%20Astrophysics">Cool Stuff Nearby" - Astrophysics</a> (<span lang="de">Andreas Stiegler</span>, 80 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2018-06-29-11-science-day/Rocket%20Engines%20-%20Engineering">Rocket Engines" - Engineering</a>  (<span lang="de">Stephan Soller</span>, 95 minutes, in German).</li>
         </ul>
       </li>
-      <!-- <li>12th Science: @@ December 2018 / January 2019. Topics:
+      <!--<li>12th Science: @@ December 2018 / January 2019. Topics:
         <ul>
           <li></li>
           <li></li>
