The Best Books on Marx (Verso blog)

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -170,6 +170,10 @@
         <a href="https://www.versobooks.com/lists/3780-karl-marx-200-years">Karl Marx: 200 Years: Reading List</a>,
         <i class="blog">Verso blog</i>, 03.05.2018.
       </li>
+      <li>
+        <a href="https://www.versobooks.com/blogs/3759-the-best-books-on-marx">The Best Books on Marx</a>,
+        <i class="blog">Verso blog</i>, 04.05.2018.
+      </li>
     </ul>
 
     <h2>Links</h2>
