Karl Marx neu gelesen und interpretiert

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -201,6 +201,10 @@
         <a href="https://www.deutschlandfunk.de/eine-lange-nacht-zum-200-geburtstag-von-karl-marx-marx-aus.704.de.html?dram:article_id=413050" hreflang="de" lang="de">Eine Lange Nacht zum 200. Geburtstag von Karl Marx &mdash; Marx aus Frankreich</a>,
         <i class="website" lang="de">Deutschlandfunk</i>, 05.05.2018.
       </li>
+      <li><span lang="de">Schönherr-Mann, Hans-Martin:
+        <a href="https://www.deutschlandfunk.de/neue-buecher-karl-marx-neu-gelesen-und-interpretiert.700.de.html?dram:article_id=417276" hreflang="de">Neue Bücher &mdash; Karl Marx neu gelesen und interpretiert</a>,
+        <i class="website">Deutschlandfunk</i>, 06.05.2018.
+      </li>
       <li>TheRealNews:
         <a href="https://www.youtube.com/watch?v=uHxOBrd9tWE">200th Anniversary of the Birth of Marx and a Revolution in Understanding History</a>
         (YouTube, 21 minutes, 05.05.2018).
