h2: Books on Marx or Marxism; Fromm

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -149,7 +149,17 @@
       -->
     </ul>
 
-    <h2>Links</h2>
+    <h2>Books on Marx or Marxism</h2>
+    <p>Titles are listed in order of publication.</p>
+    <ul>
+      <li>Fromm, Erich:
+        <i class="booktitle">Marx's Concept of Man</i>. 1961.
+        See the Wikipedia article
+        <a href="https://en.wikipedia.org/wiki/Marx%27s_Concept_of_Man">Marx's Concept of Man</a>.
+      </li>
+    </ul>
+
+    <p>Book recommendations and reading lists:</p>
     <ul>
       <li>Carver, Terrell:
         <a href="https://fivebooks.com/best-books/terrell-carver-marx-and-marxism/">The best books on Marx and Marxism</a>,
