--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -157,6 +157,11 @@
         See the Wikipedia article
         <a href="https://en.wikipedia.org/wiki/Marx%27s_Concept_of_Man">Marx's Concept of Man</a>.
       </li>
+      <li><span lang="fr">Althusser, Louis; Balibar, Étienne; Establet, Roger; Macherey, Pierre; Rancière, Jacques:
+        <i class="booktitle">Lire le Capital</i></span>. 1965.
+        See the Wikipedia article
+        <a href="https://fr.wikipedia.org/wiki/Lire_le_Capital" hreflang="fr" lang="fr">Lire le Capital</a>.
+      </li>
     </ul>
 
     <p>Book recommendations and reading lists:</p>
