Lukes: Marxism and Morality

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -162,6 +162,11 @@
         See the Wikipedia article
         <a href="https://fr.wikipedia.org/wiki/Lire_le_Capital" hreflang="fr" lang="fr">Lire le Capital</a>.
       </li>
+      <li>Lukes, Steven:
+        <i class="booktitle">Marxism and Morality</i>. 1985.
+        See the Wikipedia article
+        <a href="https://en.wikipedia.org/wiki/Marxism_and_Morality">Marxism and Morality</a>.
+      </li>
     </ul>
 
     <p>Book recommendations and reading lists:</p>
