Davis: Old Gods, New Enigmas

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -167,6 +167,12 @@
         See the Wikipedia article
         <a href="https://en.wikipedia.org/wiki/Marxism_and_Morality">Marxism and Morality</a>.
       </li>
+      <li>Davis, Mike:
+        <i class="booktitle">Old Gods, New Enigmas: Marx’s Lost Theory</i>. Verso, 2018 (320 pages)
+        <a href="https://www.versobooks.com/books/2779-old-gods-new-enigmas"><abbr>ISBN</abbr> 9781788732161</a>.
+        <br />From the publisher's description:
+        <q>Marx has returned, but which Marx? Recent biographies have proclaimed him to be an emphatically nineteenth-century figure, but in this book, Mike Davis’s first directly about Marx and Marxism, a thinker comes to light who speaks to the present as much as the past.</q>
+      </li>
     </ul>
 
     <p>Book recommendations and reading lists:</p>
