--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -134,6 +134,10 @@
         <a href="http://www.itl.nist.gov/div898/handbook/"><i class="booktitle"><abbr title="National Institute of Standards and Technology">NIST</abbr>/SEMATECH e-Handbook of Statistical Methods</i></a>.
         Last updated in 2012.
       </li>
+      <li>
+        <a href="https://simplystatistics.org/">Simply Statistics</a>:
+        a statistics blog by biostatistics professors Rafa Irizarry, Roger Peng and Jeff Leek.
+      </li>
     </ul>
 
     <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
