Dennett, Caruso: On free will

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1403,6 +1403,10 @@
         <br />Daniel Dennett <a href="https://twitter.com/danieldennett/status/1035527376027959299">tweeted about this blogpost</a>, saying,
         <q>Schliesser COMPREHENDS! I'm fortunate to have such an astute and sympathetic reader. Many thanks, Eric.</q>
       </li>
+      <li>Dennett, Daniel C.; Caruso, Gregg D.:
+        <a href="https://aeon.co/essays/on-free-will-daniel-dennett-and-gregg-caruso-go-head-to-head">On free will: Daniel Dennett and Gregg Caruso go head to head</a>
+        <i class="website">Aeon</i>, 04.10.2018.
+      </li>
     </ul>
     <!-- Misc
       KULeuven Institute of Philosophy: Programmes, Teaching and Exam Information: http://hiw.kuleuven.be/eng/programmes/index.html
