Kennedy: IBM reveals a toolkit ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -155,6 +155,10 @@
         <a href="https://www.wired.com/story/amazon-facial-recognition-congress-bias-law-enforcement/">Lawmakers Can't Ignore Facial Recognition's Bias Anymore</a>,
         <i class="website">Wired</i>, 26.07.2018.
       </li>
+      <li>Kennedy, John:
+        <a href="https://www.siliconrepublic.com/machines/ibm-fairness-360-ai-bias"><abbr>IBM</abbr> reveals a toolkit for detecting and removing bias from <abbr>AI</abbr></a>,
+        <i class="website">Silicon Republic</i>, 19.09.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
