Del: Alexander: The Biology of Moral Systems

--- a/lijst.html
+++ b/lijst.html
@@ -552,9 +552,9 @@
     <li>Karetryk, Bryan (editor): <i class="booktitle">Russian Émigré Short Stories from Bunin to Yanovsky</i>. Penguin, 2017. (464 pages)
       <a href="https://www.penguin.co.uk/books/283003/russian-emigre-short-stories-from-bunin-to-yanovsky/"><abbr>ISBN</abbr> 978 0241310908</a>.
     </li>
-    <li><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.</a>:
-      <strong><i class="booktitle">The Biology of Moral Systems</i></strong>. 1987.
-      (Routledge: <a href="https://www.routledge.com/The-Biology-of-Moral-Systems/Alexander/p/book/9780202011745"><abbr>ISBN</abbr> 9780202011745</a>).
+    <li><del><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.</a>:
+      <i class="booktitle">The Biology of Moral Systems</i>. 1987.
+      (Routledge: <a href="https://www.routledge.com/The-Biology-of-Moral-Systems/Alexander/p/book/9780202011745"><abbr>ISBN</abbr> 9780202011745</a>).</del>
       <!--See also
         * Richard D. Alexander: "A Biological Interpretation of Moral Systems", Journal of Religion & Science, 1985. http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9744.1985.tb00574.x/abstract
         * Price, Michael E.: "What Should the Function of Morality Be?", From Darwin to Eternity, Psychology Today, 06.02.2014: https://www.psychologytoday.com/blog/darwin-eternity/201402/what-should-the-function-morality-be 
