Schwartz: The discourse is unhinged

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -739,6 +739,10 @@
         <a href="https://www.youtube.com/watch?v=X-r1KvdndV0">"Bad Peter" DUST Original sci-fi short film (uncensored director's cut)</a>
         (YouTube, 9 minutes, 21.06.2018).
       </li>
+      <li>Schwartz, Oscar:
+        <a href="https://www.theguardian.com/technology/2018/jul/25/ai-artificial-intelligence-social-media-bots-wrong">'The discourse is unhinged': how the media gets <abbr>AI</abbr> alarmingly wrong</a>,
+        <i class="newspaper">The Guardian</i>, 25.07.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
