What can you lean about deep leaning in just five days?

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -752,6 +752,18 @@
           Their work has helped heighten ethnic tensions, revive nationalism, intensify political conflict,
           and even produce new political crises in countries around the world — all while weakening public trust in journalism, voting systems, and electoral outcomes.</q>
       </li>
+      <li>
+        <a href="https://www.siliconrepublic.com/machines/deep-learning-course-ichec">What can you learn about deep learning in just five days?</a>,
+        <i class="website">Silicon Republic</i>, 14.07.2018. Article about a five-day course on deep learning
+        (from the <abbr title="Irish Centre for High-End Computing">ICHEC</abbr>) that started on 17 September 2018.
+        It was a hands-on course that covered frameworks such as
+        <a href="https://pytorch.org/">PyTorch</a> (open source),
+        <a href="https://www.mathworks.com/products/matlab.html">Matlab</a>,
+        <a href="https://caffe2.ai/">Caffe2</a>,
+        <a href="https://www.tensorflow.org/">TensorFlow</a> (open source) and
+        <a href="https://www.microsoft.com/en-us/cognitive-toolkit/">Microsoft Cognitive Toolkit</a>
+        (open source; formerly <abbr>CNTK</abbr>).
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
