DFKI: Wissenschaftler aus ganz Europa treffen sich, ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -764,6 +764,10 @@
         <a href="https://www.microsoft.com/en-us/cognitive-toolkit/">Microsoft Cognitive Toolkit</a>
         (open source; formerly <abbr>CNTK</abbr>).
       </li>
+      <li><span lang="de">
+        <a href="https://www.dfki.de/web/presse/pressemitteilung/2018/claire-symposium-2018/" hreflang="de">Wissenschaftler aus ganz Europa treffen sich, um Europas globale Position in der Künstlichen Intelligenz zu stärken</a>,
+        <abbr title="Deutsches Forschungszentrum für Künstliche Intelligenz">DFKI</abbr></span>, 05.09.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
