O'Flynn, Brennan: What AI can do to improve workplace accessibility ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -768,6 +768,10 @@
         <a href="https://www.dfki.de/web/presse/pressemitteilung/2018/claire-symposium-2018/" hreflang="de">Wissenschaftler aus ganz Europa treffen sich, um Europas globale Position in der Künstlichen Intelligenz zu stärken</a>,
         <abbr title="Deutsches Forschungszentrum für Künstliche Intelligenz">DFKI</abbr></span>, 05.09.2018.
       </li>
+      <li>O'Flynn, Catherine; Brennan, Darran:
+        <a href="https://www.siliconrepublic.com/advice/workplace-accessibility-ai">What <abbr>AI</abbr> can do to improve workplace accessibility for employees with disabilities</a>,
+        <i class="website">Silicon Republic</i>, 20.09.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
