Pearl, Mackenzie: The Book of Why

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -138,6 +138,10 @@
         <a href="https://simplystatistics.org/">Simply Statistics</a>:
         a statistics blog by biostatistics professors Rafa Irizarry, Roger Peng and Jeff Leek.
       </li>
+      <li>Pearl, Judea; Mackenzie, Dana:
+        <i class="booktitle">The Book of Why: The New Science of Cause and Effect</i>. Allen Lane, 2018. (432 pages)
+        <a href="https://www.penguin.co.uk/books/289825/the-book-of-why/9780241242636.html"><abbr>ISBN</abbr> 9780241242636</a>.
+      </li>
     </ul>
 
     <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
