--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -547,6 +547,10 @@
         Berlin: LIT-Verlag, 2008.
         <a href="http://www.lit-verlag.de/isbn/3-8258-3451-7"><abbr>ISBN</abbr> 978-3-8258-3451-7</a>.</span>
       </li>
+      <li><span lang="fr">Orsini, Christine:
+        <i class="booktitle">René Girard</i>. Que sais-je? 4106. Presses universitaires de France</span>, November 2018. (128 pages)
+        <a href="https://www.puf.com/content/Ren%C3%A9_Girard"><abbr>ISBN</abbr> 978-2-13-079876-7</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
