--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -314,6 +314,14 @@
       -->
     </ul>
 
+    <h2 id="learning-maths">Learning Mathematics</h2>
+    <ul>
+      <li>Baez, John:
+        <a href="http://math.ucr.edu/home/baez/books.html">How to Learn Math and Physics</a>.
+        Last updated on 20.08.2018.
+      </li>
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>
