Coulon: Penser la violence

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -551,6 +551,10 @@
         <i class="booktitle">René Girard</i>. Que sais-je? 4106. Presses universitaires de France</span>, November 2018. (128 pages)
         <a href="https://www.puf.com/content/Ren%C3%A9_Girard"><abbr>ISBN</abbr> 978-2-13-079876-7</a>.
       </li>
+      <li><span lang="fr">Coulon, Pascal:
+        <i class="booktitle">Penser la violence : L'oeuvre de René Girard</i>. HDiffusion</span>, 2018.
+        <abbr>ISBN</abbr> 978-2363450784.<!--http://hdiffusion.fr/-->
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
