--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -320,6 +320,9 @@
         <a href="http://math.ucr.edu/home/baez/books.html">How to Learn Math and Physics</a>.
         Last updated on 20.08.2018.
       </li>
+      <li>
+        <a href="https://brilliant.org/">Brilliant: Math and science courses done right</a>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
