--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -555,6 +555,10 @@
         <i class="booktitle">Penser la violence : L'oeuvre de René Girard</i>. HDiffusion</span>, 2018.
         <abbr>ISBN</abbr> 978-2363450784.<!--http://hdiffusion.fr/-->
       </li>
+      <li>Alison, James; Palaver, Wolfgang (editors):
+        <i class="booktitle">The Palgrave Handbook of Mimetic Theory and Religion</i>. Palgrave Macmillan, 2017. (549 pages)
+        <a href="https://www.palgrave.com/de/book/9781137552808"><abbr>ISBN</abbr> 978-1-137-55280-8</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
